--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -672,6 +672,22 @@
     "    res2 = lay.validate(h5)\n",
     "res2"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b222786-3a7e-4c47-aa0e-caf5c33798c5",
+   "metadata": {},
+   "source": [
+    "## User-defined Validators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73e710a5-79a5-4528-964f-b40b4fed3b09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
