WIP refactured subpackage structure

--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -32,7 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-13_07:58:58,941 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
+      "2023-04-13_18:20:02,889 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
      ]
     }
    ],
@@ -176,8 +176,8 @@
      "data": {
       "text/plain": [
        "<Layout File (3 validators):\n",
-       " [0] AttributeValidator(path=\"/\", key=\"version\", validator=Equal(0.4.0a1, opt=False))\n",
-       " [1] AttributeValidator(path=\"/*\", key=\"long_name\", validator=Any(None, opt=False))\n",
+       " [0] AttributeValidation(path=\"/\", key=\"version\", validator=AttributeEqual(0.4.0a1, opt=False))\n",
+       " [1] AttributeValidation(path=\"/*\", key=\"long_name\", validator=AnyAttribute(None, opt=False))\n",
        " [2] GroupValidation(path=\"/device\")>"
       ]
      },
@@ -205,9 +205,20 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetValidation(parent=/*\")"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "lay['*'].dataset().attrs['standard_name'] = layout.Any()"
+    "lay['*'].dataset()#.attrs['standard_name'] = layout.Any()"
    ]
   },
   {
@@ -221,6 +232,55 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "055e871f-ba1a-4b9b-908a-b105d9439a59",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Layout File (4 validators):\n",
+       " [0] AttributeValidation(path=\"/\", key=\"version\", validator=AttributeEqual(0.4.0a1, opt=False))\n",
+       " [1] AttributeValidation(path=\"/*\", key=\"long_name\", validator=AnyAttribute(None, opt=False))\n",
+       " [2] GroupValidation(path=\"/device\")\n",
+       " [3] DatasetValidation(parent=/*\")>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0272ae42-95b9-4ca5-8449-cbe10b572b01",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'awdawd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mawdawd\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'awdawd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "awdawd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "12e98555-677d-4f33-a0ef-abb6adf605a5",
    "metadata": {
     "tags": []
@@ -248,23 +308,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9471245e-c34e-4752-b66e-dc8bcfffe93d",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<LayoutDataset(\"/*\")>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lay['*'].dataset(name=layout.Regex('^[x-z]_coordinate'), ndim=1)"
    ]
@@ -281,237 +330,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a04e4b68-c604-46d5-ac63-8902a9d77d61",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<head><style>/*\r\n",
-       "CSS inspired by xarray: https://github.com/pydata/xarray\r\n",
-       "*/\r\n",
-       ".h5tb-header > div,\r\n",
-       ".h5tb-header > ul {\r\n",
-       "    display: inline;\r\n",
-       "    margin-top: 0;\r\n",
-       "    margin-bottom: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dataarray-cls,\r\n",
-       ".h5tb-dataarray-name {\r\n",
-       "    margin-left: 2px;\r\n",
-       "    margin-right: 10px;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dataarray-name {\r\n",
-       "    color: #000;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections {\r\n",
-       "    list-style: none;\r\n",
-       "    padding: 3px;\r\n",
-       "    margin: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input {\r\n",
-       "    display: none;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections label {\r\n",
-       "    display: inline;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input + label > span {\r\n",
-       "    display: inline;\r\n",
-       "    margin-left: 4px;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input:checked + label > span {\r\n",
-       "    display: none;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input:enabled + label {\r\n",
-       "    cursor: pointer;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input:not(.h5tb-values-in) ~ ul {\r\n",
-       "    display: none;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input:not(.h5tb-values-in):checked ~ ul {\r\n",
-       "    display: block;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input + label {\r\n",
-       "    width: 140px;\r\n",
-       "    color: #555;\r\n",
-       "    font-weight: 500;\r\n",
-       "    padding: 4px 0 2px 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input + label:before {\r\n",
-       "    display: inline-block;\r\n",
-       "    content: '+';\r\n",
-       "    font-size: 11px;\r\n",
-       "    width: 15px;\r\n",
-       "    text-align: center;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input:disabled + label:before {\r\n",
-       "    color: #777;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input:checked + label:before {\r\n",
-       "    content: '-';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list {\r\n",
-       "    display: inline-block !important;\r\n",
-       "    list-style: none;\r\n",
-       "    padding: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list li {\r\n",
-       "    display: inline-block;\r\n",
-       "    padding: 0;\r\n",
-       "    margin: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list:before {\r\n",
-       "    content: '(';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list:after {\r\n",
-       "    content: ')';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list li:not(:last-child):after {\r\n",
-       "    content: ',';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-has-index {\r\n",
-       "    text-decoration: underline;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list {\r\n",
-       "    list-style: none;\r\n",
-       "    padding: 0;\r\n",
-       "    margin: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list > li {\r\n",
-       "    background-color: #fcfcfc;\r\n",
-       "    overflow: hidden;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list > li:nth-child(odd) {\r\n",
-       "    background-color: #efefef;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list li:hover {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list li > span {\r\n",
-       "    display: inline-block;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in + label {\r\n",
-       "    width: 140px;\r\n",
-       "    padding-left: 0;\r\n",
-       "    font-weight: bold;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dataset {\r\n",
-       "    width: 100px;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-attributevalue {\r\n",
-       "    width: 100px;\r\n",
-       "    text-align: left;\r\n",
-       "    color: #888;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    font-size: 12px;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in + label:before {\r\n",
-       "    content: ' ';\r\n",
-       "    display: inline-block;\r\n",
-       "    font-size: 11px;\r\n",
-       "    width: 15px;\r\n",
-       "    padding-left: 2px;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: center;\r\n",
-       "    color: #aaa;\r\n",
-       "    text-decoration: none !important;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in:enabled + label:hover:before {\r\n",
-       "    color: #000;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in:checked + label:before {\r\n",
-       "    color: #ccc;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dims {\r\n",
-       "    width: 280px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       "\r\n",
-       "\r\n",
-       ".h5tb-unit {\r\n",
-       "    width: 96px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: right;\r\n",
-       "    color: #555;\r\n",
-       "    font-style: italic;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-attr-list {\r\n",
-       "    list-style: none;\r\n",
-       "    background-color: #fff;\r\n",
-       "    padding-bottom: 6px;\r\n",
-       "    color: #555;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-attr-list li,\r\n",
-       ".h5tb-attr-list li:hover {\r\n",
-       "    background-color: #fff;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-highlight {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "    cursor: pointer;\r\n",
-       "}</style></head>\n",
-       "<div class='h5tb-warp'>\n",
-       "\n",
-       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
-       "                    <li>\n",
-       "                        <input id=\"group-ds--166514363700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--166514363700\">\n",
-       "                        /<span>(0)</span></label>\n",
-       "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.4.0a1</li>\n",
-       "                    </ul>\n",
-       "</li>\n",
-       "</ul>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "h5tbx.use(None)\n",
     "\n",
@@ -529,23 +353,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "bf51d18c-cb84-4e9b-ac5e-590bf3b0c0c3",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<ValidationResults(issues: 4)>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "res = lay.validate(h5.hdf_filename)\n",
     "res"
@@ -561,46 +374,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f3b43e42-9222-4dd3-8a9d-0312843eb8d9",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[91mValidation failed: attribute \"version\" does not exist in <HDF5 file \"tmp0.hdf\" (mode r)>\u001b[0m\n",
-      "\u001b[91mValidation failed: Group /device does not exist in <HDF5 file \"tmp0.hdf\" (mode r)>\u001b[0m\n",
-      "\u001b[91mValidation failed: Group /fluid does not exist in <HDF5 file \"tmp0.hdf\" (mode r)>\u001b[0m\n",
-      "\u001b[91mValidation failed: Group /fluid does not exist in <HDF5 file \"tmp0.hdf\" (mode r)>\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "res.print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "64ae93d6-c8ee-43f9-9cd9-fcc49df04270",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LayoutRegistry(\"tbx\",)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "layout.File.Registry()"
    ]
@@ -615,23 +406,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "1f2143ab-cbad-499f-8068-080e59ebec74",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<ValidationResults(issues: 3)>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with h5tbx.File() as h5:\n",
     "    h5.attrs['version'] = h5tbx.__version__\n",
@@ -649,23 +429,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "49a0ed8f-e8e0-446a-bf55-73e05652b2f6",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<ValidationResults(issues: 3)>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with h5tbx.File() as h5:\n",
     "    h5.attrs['version'] = h5tbx.__version__\n",
