conditional attributes first working version

--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -32,7 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-13_18:20:02,889 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
+      "2023-04-14_14:05:03,891 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "lay = layout.File()"
+    "lay = layout.Layout()"
    ]
   },
   {
@@ -136,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "LayoutGroup(\"/device\")"
+       "GroupValidation(path=\"/\")"
       ]
      },
      "execution_count": 5,
@@ -176,9 +176,9 @@
      "data": {
       "text/plain": [
        "<Layout File (3 validators):\n",
-       " [0] AttributeValidation(path=\"/\", key=\"version\", validator=AttributeEqual(0.4.0a1, opt=False))\n",
-       " [1] AttributeValidation(path=\"/*\", key=\"long_name\", validator=AnyAttribute(None, opt=False))\n",
-       " [2] GroupValidation(path=\"/device\")>"
+       " [0] <h5rdmtoolbox.conventions.layout.attrs.AttributeValidation object at 0x000001430B287CD0>\n",
+       " [1] <h5rdmtoolbox.conventions.layout.attrs.AttributeValidation object at 0x000001430B2AB1F0>\n",
+       " [2] GroupValidation(path=\"/\")>"
       ]
      },
      "execution_count": 6,
@@ -205,20 +205,9 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetValidation(parent=/*\")"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lay['*'].dataset()#.attrs['standard_name'] = layout.Any()"
+    "#lay['*'].dataset()#.attrs['standard_name'] = layout.Any()"
    ]
   },
   {
@@ -240,11 +229,10 @@
     {
      "data": {
       "text/plain": [
-       "<Layout File (4 validators):\n",
-       " [0] AttributeValidation(path=\"/\", key=\"version\", validator=AttributeEqual(0.4.0a1, opt=False))\n",
-       " [1] AttributeValidation(path=\"/*\", key=\"long_name\", validator=AnyAttribute(None, opt=False))\n",
-       " [2] GroupValidation(path=\"/device\")\n",
-       " [3] DatasetValidation(parent=/*\")>"
+       "<Layout File (3 validators):\n",
+       " [0] <h5rdmtoolbox.conventions.layout.attrs.AttributeValidation object at 0x000001430B287CD0>\n",
+       " [1] <h5rdmtoolbox.conventions.layout.attrs.AttributeValidation object at 0x000001430B2AB1F0>\n",
+       " [2] GroupValidation(path=\"/\")>"
       ]
      },
      "execution_count": 8,
@@ -261,33 +249,21 @@
    "execution_count": 9,
    "id": "0272ae42-95b9-4ca5-8449-cbe10b572b01",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'awdawd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mawdawd\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'awdawd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "awdawd"
+    "#awdawd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "12e98555-677d-4f33-a0ef-abb6adf605a5",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "lay['fluid/*'].dataset().attrs['units'] = layout.Any()"
+    "#lay['fluid/*'].dataset().attrs['units'] = layout.Any()"
    ]
   },
   {
@@ -308,14 +284,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9471245e-c34e-4752-b66e-dc8bcfffe93d",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "lay['*'].dataset(name=layout.Regex('^[x-z]_coordinate'), ndim=1)"
+    "#lay['*'].dataset(name=layout.Regex('^[x-z]_coordinate'), ndim=1)"
    ]
   },
   {
@@ -330,12 +306,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a04e4b68-c604-46d5-ac63-8902a9d77d61",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<head><style>/*\r\n",
+       "CSS inspired by xarray: https://github.com/pydata/xarray\r\n",
+       "*/\r\n",
+       ".h5tb-header > div,\r\n",
+       ".h5tb-header > ul {\r\n",
+       "    display: inline;\r\n",
+       "    margin-top: 0;\r\n",
+       "    margin-bottom: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataarray-cls,\r\n",
+       ".h5tb-dataarray-name {\r\n",
+       "    margin-left: 2px;\r\n",
+       "    margin-right: 10px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataarray-name {\r\n",
+       "    color: #000;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections {\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 3px;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections label {\r\n",
+       "    display: inline;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label > span {\r\n",
+       "    display: inline;\r\n",
+       "    margin-left: 4px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:checked + label > span {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:enabled + label {\r\n",
+       "    cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:not(.h5tb-values-in) ~ ul {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:not(.h5tb-values-in):checked ~ ul {\r\n",
+       "    display: block;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label {\r\n",
+       "    width: 140px;\r\n",
+       "    color: #555;\r\n",
+       "    font-weight: 500;\r\n",
+       "    padding: 4px 0 2px 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label:before {\r\n",
+       "    display: inline-block;\r\n",
+       "    content: '+';\r\n",
+       "    font-size: 11px;\r\n",
+       "    width: 15px;\r\n",
+       "    text-align: center;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:disabled + label:before {\r\n",
+       "    color: #777;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:checked + label:before {\r\n",
+       "    content: '-';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list {\r\n",
+       "    display: inline-block !important;\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list li {\r\n",
+       "    display: inline-block;\r\n",
+       "    padding: 0;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list:before {\r\n",
+       "    content: '(';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list:after {\r\n",
+       "    content: ')';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list li:not(:last-child):after {\r\n",
+       "    content: ',';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-has-index {\r\n",
+       "    text-decoration: underline;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list {\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 0;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list > li {\r\n",
+       "    background-color: #fcfcfc;\r\n",
+       "    overflow: hidden;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list > li:nth-child(odd) {\r\n",
+       "    background-color: #efefef;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list li:hover {\r\n",
+       "    background-color: rgba(3, 169, 244, .2);\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list li > span {\r\n",
+       "    display: inline-block;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in + label {\r\n",
+       "    width: 140px;\r\n",
+       "    padding-left: 0;\r\n",
+       "    font-weight: bold;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataset {\r\n",
+       "    width: 100px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attributevalue {\r\n",
+       "    width: 100px;\r\n",
+       "    text-align: left;\r\n",
+       "    color: #888;\r\n",
+       "    white-space: nowrap;\r\n",
+       "    font-size: 12px;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in + label:before {\r\n",
+       "    content: ' ';\r\n",
+       "    display: inline-block;\r\n",
+       "    font-size: 11px;\r\n",
+       "    width: 15px;\r\n",
+       "    padding-left: 2px;\r\n",
+       "    padding-right: 2px;\r\n",
+       "    text-align: center;\r\n",
+       "    color: #aaa;\r\n",
+       "    text-decoration: none !important;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in:enabled + label:hover:before {\r\n",
+       "    color: #000;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in:checked + label:before {\r\n",
+       "    color: #ccc;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dims {\r\n",
+       "    width: 280px;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       ".h5tb-unit {\r\n",
+       "    width: 96px;\r\n",
+       "    white-space: nowrap;\r\n",
+       "    padding-right: 2px;\r\n",
+       "    text-align: right;\r\n",
+       "    color: #555;\r\n",
+       "    font-style: italic;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attr-list {\r\n",
+       "    list-style: none;\r\n",
+       "    background-color: #fff;\r\n",
+       "    padding-bottom: 6px;\r\n",
+       "    color: #555;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attr-list li,\r\n",
+       ".h5tb-attr-list li:hover {\r\n",
+       "    background-color: #fff;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-highlight {\r\n",
+       "    background-color: rgba(3, 169, 244, .2);\r\n",
+       "    cursor: pointer;\r\n",
+       "}</style></head>\n",
+       "<div class='h5tb-warp'>\n",
+       "\n",
+       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "                    <li>\n",
+       "                        <input id=\"group-ds--4759276800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4759276800\">\n",
+       "                        /<span>(0)</span></label>\n",
+       "                  \n",
+       "\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.4.0a1</li>\n",
+       "                    </ul>\n",
+       "</li>\n",
+       "</ul>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "h5tbx.use(None)\n",
     "\n",
@@ -353,12 +554,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "bf51d18c-cb84-4e9b-ac5e-590bf3b0c0c3",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ValidationResults(issues: 3)>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "res = lay.validate(h5.hdf_filename)\n",
     "res"
@@ -369,31 +581,29 @@
    "id": "d74514f9-bf73-4d9d-b85b-cf8b3bcc2056",
    "metadata": {},
    "source": [
-    "To find out what the issues are, best is to `print()` the issue messages. Note, some issues are \"hidden\"."
+    "To find out what the issues are, best is to `report()` the issue messages. Note, some issues are \"hidden\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f3b43e42-9222-4dd3-8a9d-0312843eb8d9",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<h5rdmtoolbox.conventions.layout.attrs.AttributeValidation object at 0x000001430B2BBBB0>\n",
+      "<h5rdmtoolbox.conventions.layout.attrs.AttributeValidation object at 0x000001430B2CE2B0>\n",
+      "GroupValidation(path=\"/\")\n"
+     ]
+    }
+   ],
    "source": [
-    "res.print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64ae93d6-c8ee-43f9-9cd9-fcc49df04270",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "layout.File.Registry()"
+    "res.report()"
    ]
   },
   {
@@ -406,12 +616,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1f2143ab-cbad-499f-8068-080e59ebec74",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ValidationResults(issues: 2)>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with h5tbx.File() as h5:\n",
     "    h5.attrs['version'] = h5tbx.__version__\n",
@@ -429,12 +650,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "49a0ed8f-e8e0-446a-bf55-73e05652b2f6",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ValidationResults(issues: 2)>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with h5tbx.File() as h5:\n",
     "    h5.attrs['version'] = h5tbx.__version__\n",
@@ -452,8 +684,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "73e710a5-79a5-4528-964f-b40b4fed3b09",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# see tests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac282051-e8bd-42a5-9218-b75e73f35040",
+   "metadata": {},
+   "source": [
+    "## Registred layouts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c17da1cb-821b-4187-85ab-2ea58b0d13d4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LayoutRegistry(\"tbx\",)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layout.Layout.Registry()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "644b6996-4b19-445a-af89-1ad10cb947c1",
    "metadata": {},
    "outputs": [],
    "source": []
